--- a/style.css
+++ b/style.css
@@ -249,6 +249,8 @@ a:hover {
     .highlight,
     .learnMore {
         font-size: 0.5rem;
+        padding-right:0.4rem;
+        padding-left:0.4rem;
     }
 
     .grid {
