--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ a:hover {
 @media screen and (min-width:390px) and (max-width:499px) {
     .menu {
         width: 43vh;
-        font-size: 0.6git rem;
+        font-size: 0.6rem;
     }
 
     .nameTitle {
